--- a/src/main/resources/com/margallo/css/styles.css
+++ b/src/main/resources/com/margallo/css/styles.css
@@ -65,12 +65,17 @@
     -fx-alignment: center-right;
 }
 
+.label.form-label.top {
+    -fx-padding: 10px 5px 0 5px;
+}
+
 .button {
     -fx-background-color: #2c3e50;
     -fx-text-fill: #ecf0f1;
     -fx-font-size: 15px;
     -fx-font-weight: bold;
     -fx-min-width: 100px;
+    -fx-padding: 5px;
 }
 
 .button:hover {
@@ -89,7 +94,7 @@
     -fx-background-color: #2c3e50;
     -fx-text-fill: #ecf0f1;
     -fx-font-size: 15px;
-    -fx-border-radius: 0;
+    -fx-border-radius: 2px;
     -fx-border-width: 1px;
     -fx-border-color: #ecf0f1;
     -fx-border-style: solid;
@@ -155,4 +160,65 @@
 
 .footer .button.danger:pressed {
     -fx-background-color: #e74c3c;
+}
+
+.dialog-pane {
+    -fx-background-color: #2c3e50;
+}
+
+.dialog-pane > .expandable-content {
+    -fx-padding: 10px 15px; /* 8px */
+}
+
+.dialog-pane > .button-bar > .container {
+    -fx-padding: 10px 15px; /* 10px */
+}
+
+.dialog-pane > .content.label {
+    -fx-alignment: top-left;
+    -fx-font-size: 15px;
+}
+
+.dialog-pane > .content {
+    -fx-padding: 10px 15px 0 15px;
+}
+
+.dialog-pane:no-header .graphic-container {
+    -fx-padding: 0.833em 0 0 0.833em; /* 10px 0px 0px 10px */
+}
+
+.dialog-pane:header .header-panel {
+    /*-fx-padding: 0.833em 1.166em 0.833em 1.166em; *//* 10px 14px 10px 14px */
+    -fx-padding: 10px 15px;
+    -fx-background-color: #34495e;
+    -fx-background-insets: 0, 0 0 1 0;
+}
+
+.dialog-pane:header .header-panel .label {
+    -fx-font-size: 20px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ecf0f1;
+    -fx-wrap-text: true;
+    -fx-padding: 20px;
+}
+
+.dialog-pane:header .header-panel .graphic-container {
+    /* This prevents the text in the header running directly into the graphic */
+    -fx-padding: 0 0 0 0.833em; /* 0px 0px 0px 10px */
+}
+
+.dialog-pane > .button-bar > .container {
+    -fx-padding: 25px 15px 15px 15px;
+}
+
+.dialog-pane > .button-bar > .container > .details-button {
+    -fx-alignment: baseline-left;
+    -fx-focus-traversable: false;
+    -fx-padding: 0.416em;
+    -fx-font-size: 12px;
+    -fx-text-fill: #ecf0f1;
+}
+
+.dialog-pane > .button-bar > .container > .details-button:hover {
+    -fx-underline: true;
 }
