--- a/src/main/resources/com/margallo/fxml/home.fxml
+++ b/src/main/resources/com/margallo/fxml/home.fxml
@@ -27,7 +27,7 @@
                 <Insets top="15" left="15" bottom="15" right="15"/>
             </padding>
             <StackPane AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                <TableView fx:id="employeeTable" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS" maxWidth="760">
+                <TableView fx:id="employeeTable" maxWidth="760">
                     <columnResizePolicy><TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/></columnResizePolicy>
                     <columns>
                         <TableColumn text="Employee ID">
