--- a/src/main/resources/com/margallo/fxml/search.fxml
+++ b/src/main/resources/com/margallo/fxml/search.fxml
@@ -15,7 +15,7 @@
         </HBox>
     </top>
     <center>
-        <FlowPane>
+        <VBox maxWidth="760">
             <padding>
                 <Insets top="10" left="15" bottom="10" right="10"/>
             </padding>
@@ -51,40 +51,34 @@
                     Show Advanced
                 </Button>
             </GridPane>
-            <GridPane>
-                <padding>
-                    <Insets top="15" left="15" bottom="15" right="15"/>
-                </padding>
-                <TableView fx:id="employeeTable" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="1"
-                           maxWidth="Infinity" GridPane.hgrow="ALWAYS">
-                    <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-                    </columnResizePolicy>
-                    <columns>
-                        <TableColumn text="Employee ID">
-                            <cellValueFactory>
-                                <PropertyValueFactory property="employeeId"/>
-                            </cellValueFactory>
-                        </TableColumn>
-                        <TableColumn text="First Name">
-                            <cellValueFactory>
-                                <PropertyValueFactory property="firstName"/>
-                            </cellValueFactory>
-                        </TableColumn>
-                        <TableColumn text="Last Name">
-                            <cellValueFactory>
-                                <PropertyValueFactory property="lastName"/>
-                            </cellValueFactory>
-                        </TableColumn>
-                        <TableColumn text="Position">
-                            <cellValueFactory>
-                                <PropertyValueFactory property="position"/>
-                            </cellValueFactory>
-                        </TableColumn>
-                    </columns>
-                </TableView>
-            </GridPane>
-        </FlowPane>
+            <TableView fx:id="employeeTable" VBox.vgrow="ALWAYS">
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                </columnResizePolicy>
+                <columns>
+                    <TableColumn text="Employee ID">
+                        <cellValueFactory>
+                            <PropertyValueFactory property="employeeId"/>
+                        </cellValueFactory>
+                    </TableColumn>
+                    <TableColumn text="First Name">
+                        <cellValueFactory>
+                            <PropertyValueFactory property="firstName"/>
+                        </cellValueFactory>
+                    </TableColumn>
+                    <TableColumn text="Last Name">
+                        <cellValueFactory>
+                            <PropertyValueFactory property="lastName"/>
+                        </cellValueFactory>
+                    </TableColumn>
+                    <TableColumn text="Position">
+                        <cellValueFactory>
+                            <PropertyValueFactory property="position"/>
+                        </cellValueFactory>
+                    </TableColumn>
+                </columns>
+            </TableView>
+        </VBox>
     </center>
     <bottom>
         <GridPane styleClass="footer">
